fixed build issues

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,5 @@
 @import './tokens';
-@import '../../node_modules/@crinkle/feo/feo.scss';
+@import '~@crinkle/feo/feo';
 
 /*******
 * Generic styling
