custom arrow heads and connection lines

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -15,7 +15,7 @@ body {
 *******/
 @import './sidebar';
 @import './buttons';
-@import './node';
+@import './flow';
 @import './details';
 @import './toasts';
 
