added guard configuration and changed transition display

--- a/src/styles/_tokens.scss
+++ b/src/styles/_tokens.scss
@@ -5,7 +5,9 @@ $colors: (
   'gray-400': #19232a,
   'gray-500': #0e141e,
   'blue': #5467ff,
+  'blue-dark': #2e43eb,
   'red': #ff0056,
+  'red-dark': #d00046,
 );
 
 :root {
