--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -20,6 +20,7 @@ body {
 @import './blocks/toolbar';
 @import './blocks/tooltip';
 @import './blocks/modal';
+@import './blocks/switch';
 
 .no-outline:focus {
   outline: none;
