--- a/src/styles/blocks/_sidebar.scss
+++ b/src/styles/blocks/_sidebar.scss
@@ -1,6 +1,7 @@
 .sidebar {
   overflow-y: auto;
   z-index: 100;
+  background-color: var(--secondary-background-color);
   width: var(--size-1);
   transition: var(--transition);
   overflow-y: auto;
