--- a/src/styles/blocks/_switch.scss
+++ b/src/styles/blocks/_switch.scss
@@ -23,7 +23,7 @@
   padding: 1px;
   border-radius: 50px;
   border: 1px solid var(--color-blue);
-  background-color: var(--color-gray-300);
+  background-color: var(--background-color);
   box-sizing: padding-box;
   -webkit-transition: all 100ms ease-in-out;
   -moz-transition: all 100ms ease-in-out;
