--- a/src/styles/blocks/_canvas.scss
+++ b/src/styles/blocks/_canvas.scss
@@ -51,7 +51,7 @@
 
 footer {
   position: absolute;
-  bottom: 1rem;
+  bottom: var(--spacing-2);
   left: 1rem;
   z-index: 100;
   color: var(--text-color);
