added import with a basic auto layout feature

--- a/src/styles/blocks/_canvas.scss
+++ b/src/styles/blocks/_canvas.scss
@@ -8,7 +8,7 @@
   border: none;
   box-shadow: var(--elevation-2);
   text-align: center;
-  max-width: 12rem;
+  max-width: 200px;
 
   > .react-flow__handle {
     visibility: hidden;
