--- a/src/styles/blocks/_switch.scss
+++ b/src/styles/blocks/_switch.scss
@@ -23,7 +23,7 @@
   padding: 1px;
   border-radius: 50px;
   border: 1px solid var(--color-blue);
-  background-color: var(--background-color);
+  background-color: var(--theme-back);
   box-sizing: padding-box;
   transition: var(--transition);
 }
