--- a/src/styles/blocks/_tooltip.scss
+++ b/src/styles/blocks/_tooltip.scss
@@ -2,7 +2,6 @@
   position: relative;
 }
 
-[data-tooltip]:hover::before,
 [data-tooltip]:hover::before {
   content: attr(data-tooltip);
   position: absolute;
@@ -10,7 +9,7 @@
 
   border-radius: var(--radius-0);
   padding: var(--spacing-000);
-  background-color: var(--secondary-background-color);
+  background-color: var(--color-gray-300);
   color: var(--color-gray-100);
 
   bottom: 115%;
@@ -30,6 +29,19 @@
   transform: translate(-50%, 0);
   border-width: 5px;
   border-style: solid;
-  border-color: var(--secondary-background-color) transparent transparent
-    transparent;
+  border-color: var(--color-gray-300) transparent transparent transparent;
+}
+
+[data-tooltip-position='left']:hover::before {
+  left: calc(100% - 5px);
+  top: 50%;
+  bottom: auto;
+  transform: translate(0, -50%);
+}
+
+[data-tooltip-position='left']:hover::after {
+  top: 50%;
+  left: calc(100% - 15px);
+  transform: translate(0, -50%);
+  border-color: transparent var(--color-gray-300) transparent transparent;
 }
