--- a/src/styles/blocks/_switch.scss
+++ b/src/styles/blocks/_switch.scss
@@ -1,47 +1,28 @@
-/* The switch - the box around the slider */
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 2.75em;
-  height: calc(1.25em + 2px);
-  font-size: inherit;
+button[role='switch'] {
+  height: 1.8rem;
+  background-color: var(--color-gray-300);
+  border: 2px solid var(--color-gray-300);
+  border-radius: 1rem;
+  transition: all 200ms ease-in-out;
 }
 
-/* Hide default HTML checkbox */
-.switch input {
-  display: none;
-}
-
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  padding: 1px;
-  border-radius: 50px;
-  border: 1px solid var(--color-blue);
-  background-color: var(--theme-back);
-  box-sizing: padding-box;
-  transition: var(--transition);
-}
-
-.slider:before {
-  position: absolute;
-  content: '';
-  height: 1.25em;
-  width: 1.25em;
-  top: -0.5px;
-  left: -0.5px;
-  border-radius: 50%;
+button[role='switch'][aria-checked='true'] {
   background-color: var(--color-blue);
-  transition: var(--transition);
+  border-color: var(--color-blue);
 }
 
-input:checked + .slider:before {
-  -webkit-transform: translateX(1.5em);
-  -ms-transform: translateX(1.5em);
-  transform: translateX(1.5em);
+button[role='switch'] span {
+  display: inline-block;
+  line-height: calc(1.8rem - 4px);
+  height: calc(1.8rem - 4px);
+  min-width: 2.2rem;
+  color: var(--color-gray-100);
+  border-radius: 2rem;
+  pointer-events: none;
+  transition: all 200ms ease-in-out;
+}
+
+button[role='switch'][aria-checked='true'] > :last-child,
+button[role='switch'][aria-checked='false'] > :first-child {
+  background: var(--color-gray-100);
 }
