--- a/src/styles/blocks/_command.scss
+++ b/src/styles/blocks/_command.scss
@@ -1,4 +1,8 @@
 .command-palette {
+  border-top: 1px solid var(--color-gray-500);
+  max-height: 350px;
+  overflow-y: auto;
+
   span {
     padding-top: 2px;
     padding-bottom: 2px;
