--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -84,3 +84,25 @@ a:hover {
 .monospace {
   font-family: var(--monospace);
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 1rem;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background-color: var(--color-gray-400);
+  border-radius: 1rem;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--color-gray-300);
+  border-radius: 1rem;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--color-blue);
+}
