--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,10 +5,11 @@
 * Generic styling
 *******/
 html,
-body {
-  color: var(--gray-500);
+body,
+.grail {
+  color: var(--theme-front);
   line-height: 1.4;
-  background-color: var(--gray-100);
+  background-color: var(--theme-back);
 }
 
 /*******
