--- a/src/styles/blocks/_switch.scss
+++ b/src/styles/blocks/_switch.scss
@@ -1,5 +1,6 @@
 button[role='switch'] {
   height: 1.8rem;
+  min-width: 4.7rem;
   background-color: var(--color-gray-300);
   border: 2px solid var(--color-gray-300);
   border-radius: 1rem;
