--- a/src/styles/_tokens.scss
+++ b/src/styles/_tokens.scss
@@ -10,25 +10,7 @@ $feo-colors: (
   'red-dark': #d00046,
 );
 
-// Typography system (golden ratio)
-$feo-font-sizes: (
-  '0': 1,
-  '00': 0.8,
-  '000': 0.64,
-  '1': 1.25,
-  '2': 1.563,
-  '3': 1.953,
-);
-
-$feo-spacing: (
-  'none': 0,
-  '0': 1,
-  '00': 0.75,
-  '000': 0.5,
-  '1': 1.25,
-  '2': 2,
-  '3': 3,
-);
+$feo-fluid: false;
 
 $light-theme: (
   'front': 'gray-500',
@@ -50,7 +32,7 @@ $feo-themes: (
 );
 
 // Size system
-$feo-sizes: (
+$feo-breakpoints: (
   '00': 6rem,
   '0': 15rem,
   '1': 20rem,
@@ -61,17 +43,10 @@ $feo-sizes: (
 );
 
 :root {
-  --sans-serif: system-ui, -apple-system, blinkmacsystemfont, 'Segoe UI',
-    'Roboto', 'Helvetica Neue', 'Arial', sans-serif;
-  --monospace: Inconsolata, Menlo, Monaco, Consolas, 'Courier New', monospace;
-  --serif: Georgia, serif;
-
   // box-shadow
   --elevation-1: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
   --elevation-2: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
     0 2px 4px -1px rgba(0, 0, 0, 0.06);
   --elevation-3: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
     0 4px 6px -2px rgba(0, 0, 0, 0.05);
-
-  --transition: all 200ms ease-in-out;
 }
