--- a/src/styles/blocks/_controls.scss
+++ b/src/styles/blocks/_controls.scss
@@ -1,7 +1,7 @@
 .controls {
   position: absolute;
   top: 50%;
-  left: var(--spacing-1);
+  left: var(--size-1);
   transform: translateY(-50%);
   z-index: 100;
 
@@ -10,12 +10,12 @@
   }
 
   & > *:first-child {
-    border-top-left-radius: var(--radius-000);
-    border-top-right-radius: var(--radius-000);
+    border-top-left-radius: var(--size-000);
+    border-top-right-radius: var(--size-000);
   }
 
   & > *:last-child {
-    border-bottom-left-radius: var(--radius-000);
-    border-bottom-right-radius: var(--radius-000);
+    border-bottom-left-radius: var(--size-000);
+    border-bottom-right-radius: var(--size-000);
   }
 }
