--- a/src/styles/blocks/_sidebar.scss
+++ b/src/styles/blocks/_sidebar.scss
@@ -1,7 +1,7 @@
 .sidebar {
   overflow-y: auto;
   z-index: 100;
-  width: var(--size-1);
+  width: var(--bp-1);
   transition: var(--transition);
   overflow-y: auto;
 }
