chore: updated all crinkles packages and made basic stuff working

--- a/src/styles/blocks/_modal.scss
+++ b/src/styles/blocks/_modal.scss
@@ -17,7 +17,7 @@
 .modal-dialog {
   position: relative;
   margin-top: calc(var(--size-3) + 1rem);
-  width: var(--bp-3);
+  width: var(--break-3);
   max-height: 100%;
   background-clip: padding-box;
   outline: 0;
