--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,7 +7,7 @@
 html,
 body,
 .grail {
-  min-width: var(--bp-1);
+  min-width: var(--break-1);
   color: var(--color-gray-100);
   font-family: var(--sans-serif);
   background-color: var(--color-gray-500);
